--- a/frontend/src/assets/styles/index.css
+++ b/frontend/src/assets/styles/index.css
@@ -27,3 +27,9 @@ a {
 .main {
   display: flex;
 }
+.content {
+  width: calc(100vw - 15rem);
+  display: flex;
+  flex-direction: column;
+  margin-left: 15rem;
+}
